--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 VITE_DEV_PORT = '8010'
 
 # development path
-VITE_DEV_PATH = 'http://localhost:8010'
+VITE_DEV_PATH = 'http://116.62.96.56:8010'
 
 # production path
-VITE_PRO_PATH = 'http://localhost:8010'
+VITE_PRO_PATH = 'http://116.62.96.56:8010'
